--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.facebook.com/mahesh.jaishi.90'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://www.facebook.com/mahesh.jaishi.90'"
           />
         </div>
       </div>
@@ -253,13 +253,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://www.facebook.com/reel/1856386354821523'"
               >
                 Facebook
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://www.facebook.com/reel/1856386354821523'"
               >
                 Visit
               </button>
@@ -277,13 +277,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://www.facebook.com/reel/355127740688077'"
               >
               Facebook
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://www.facebook.com/reel/355127740688077'"
               >
                 Visit
               </button>
@@ -301,13 +301,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://www.facebook.com/reel/997988374625113'"
               >
               Facebook
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://www.facebook.com/reel/997988374625113'"
               >
                 Visit
               </button>
@@ -341,7 +341,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">Facebook</a></p>
+          <p><a href="https://www.facebook.com/mahesh.jaishi.90">Facebook</a></p>
         </div>
       </div>
     </section>
