--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Mahesh | Jaishi</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
+    <div id="mode">
+      <!-- Dark Mode -->
+      <button id="darkModeButton" class="mode-button dark-mode" onclick="toggleDarkMode()">
+          <i class="fas fa-moon"></i> <!-- Dark Mode Icon -->
+      </button>
+  
+      <!-- Light Mode -->
+      <button id="lightModeButton" class="mode-button light-mode" onclick="toggleLightMode()">
+          <i class="fas fa-sun"></i> <!-- Light Mode Icon -->
+      </button>
+  </div>  
     <nav id="desktop-nav">
       <div class="logo">Mahesh Jaishi (अछामी)</div>
       <div>
@@ -43,7 +55,7 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Mahesh Jaishi</h1>
-        <p class="section__text__p2">Journalist / Digital Creater</p>
+        <p class="section__text__p2">Journalist / Digital Creator</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -51,7 +63,7 @@
           >
             Download CV
           </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          <button class="btn btn-color-1" onclick="location.href='./#contact'" style="color: #f1f1f1;">
             Contact Info
           </button>
         </div>
@@ -86,15 +98,17 @@
           <div class="about-containers">
             <div class="details-container">
               <img
+              id="first-icon"
                 src="./assets/experience.png"
                 alt="Experience icon"
-                class="icon"
+                class="icon" onclick="onclk();"
               />
               <h3>Experience</h3>
-              <p>4+ years <br />Journalist / Digital Creater</p>
+              <p>4+ years <br />Journalist / Digital Creator</p>
             </div>
             <div class="details-container">
               <img
+              id="second-icon"
                 src="./assets/education.png"
                 alt="Education icon"
                 class="icon"
@@ -221,7 +235,7 @@
                 />
                 <div>
                   <h3>Audio Editing</h3>
-                  <p>Basic</p>bro
+                  <p>Basic</p>
                 </div>
               </article>
             </div>
@@ -249,7 +263,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">📋</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -273,7 +287,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">📋</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -297,7 +311,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">📋</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
