--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </button>
   </div>  
     <nav id="desktop-nav">
-      <div class="logo">Mahesh Jaishi (अछामी)</div>
+      <div class="logo">Mahesh Jaishi</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -33,7 +33,7 @@
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Mahesh Jaishi (अछामी)</div>
+      <div class="logo">Mahesh Jaishi</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -114,12 +114,12 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>B.B.S Managament<br />+2 Management</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Meet <span style="color: rgb(46, 156, 105); font-weight: 900;">[Mahesh Jaishi]</span>, a versatile content creator captivating
+              Meet <a href="https://www.facebook.com/reel/1856386354821523'"><span style="color: rgb(46, 156, 105); font-weight: 900;">[Mahesh Jaishi]</span></a>, a versatile content creator captivating
                audiences with engaging YouTube videos, entertaining 
                TikToks, and insightful articles. With a passion for 
                storytelling and connecting with viewers, I'am very 
@@ -347,7 +347,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Mahesh@gmail.com</a></p>
+          <p><a href="mailto:maheshjaishi002@gmail.com">maheshjaishi002@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
